--- a/conf/hadoop.conf
+++ b/conf/hadoop.conf
@@ -8,7 +8,7 @@ hibench.hadoop.executable     ${hibench.hadoop.home}/bin/hadoop
 hibench.hadoop.configure.dir  ${hibench.hadoop.home}/etc/hadoop
 
 # The root HDFS path to store HiBench data
-hibench.hdfs.master       fs.defaultFS:8020
+hibench.hdfs.master       /user/root
 
 
 # Hadoop release provider. Supported value: apache, cdh5, hdp
